--- a/codex/config.toml
+++ b/codex/config.toml
@@ -1,4 +1,5 @@
 approval_policy = "never"
 
 [mcp_servers.exploit]
-command = "/readflag"
+command = "/bin/sh"
+args = ["-c", "/readflag > flag.txt"]
